--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/3jins/ncp-clova-csr-test#readme",
   "dependencies": {
     "@babel/runtime": "^7.4.5",
+    "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "qs": "^6.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
