--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/runtime": "^7.4.5",
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
+    "fast-levenshtein": "^2.0.6",
     "lodash": "^4.17.15",
     "qs": "^6.7.0"
   },
